syntax = "proto3";

package user;

import "pkg/proto/common/common.proto";

option go_package = "github.com/Riku-KANO/kube-ec/services/user/proto";

service UserService {
  // User management operations (authentication moved to AuthService)
  rpc GetUser(GetUserRequest) returns (User);
  rpc UpdateUser(UpdateUserRequest) returns (User);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  common.Address address = 4;
  string phone_number = 5;
  common.Timestamp created_at = 6;
  common.Timestamp updated_at = 7;
}

message GetUserRequest {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  common.Address address = 3;
  string phone_number = 4;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}
